fix side scroll on mobile

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -45,6 +45,7 @@ body {
   color: var(--color-blue);
   background-color: var(--color-white);
   overflow-x: hidden;
+  width: 100vw;
 }
 
 /* TYPOGRAPHY */
